--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -160,17 +160,15 @@
 
         where $\beta_{ij}$ can be replaced with $r_i e_j$ when appropriate. Though this scaling step is not strictly necessary, per capita interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
 
-    \subsection{Integrating species-level differences in demographic rates}
+    \subsection{Integrating species-level differences in demographic rates / Integrating interaction strengths into models of population dynamics}
+
+    	In certain instances, models of population dynamics can be used to further extend the usefulness of the framework presented here. 
+    	Due to inherent practical constraints with collecting empirical data, the variable chosen to measure the performance of focal individuals $F_i$ may not always directly translate into estimates of lifetime reproductive success. For example, certain life-history reproductive strategies may lead to measures of high seed production in the field which do not account for low seed or seedling survival rates post-observation. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects.
 
 
-    	Due to inherent practical constraints with collecting empirical data, the variable chosen to measure the performance of focal individuals $F_i$ may not always directly translate into estimates of lifetime reproductive success. For example, certain life-history reproductive strategies may lead to measures of high seed production in the field which do not account for low seed or seedling survival rates post-observation. In these cases, population dynamics models can be used to relate ....
     	Alternatively, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success.
 
-    	If performance is measured by seed production for example, species-specific differences in seed germination and survival may confound...
-
-
-    	In the example of seed production, .. If for example, seed production is ch
-
+    	In both cases, a model of population dynamics 
 
     	Species-level differences in the chosen measure of performance $F_i$ may also reflect other processes than ..
 
@@ -184,7 +182,7 @@
         \paragraph{}
         Though this rescaling is not necessary when interactions are quantified as effects on rates such as growth or biomass accumulation, it is particularly useful in cases where $F_i$ is captured by variables which are affected by r/K reproductive strategies, such as seed or fruit production. Species $i$ for example may produce a high number of seeds of which few are viable, whereas species $j$ produces very few seeds though these are much more likely to mature into reproductive adults. Scaling the interaction terms returned by the models allows us to compare how species $i$ and $j$ both respond to interactions, relative to 
 
-Depending on the nature of the proxy chosen, this between-species variation in $F_i$ may not capture true differences in the fitness of each species, but rather differences in reproductive strategies for example due to r/K tradeoffs. 
+		Depending on the nature of the proxy chosen, this between-species variation in $F_i$ may not capture true differences in the fitness of each species, but rather differences in reproductive strategies for example due to r/K tradeoffs. 
 
         Species $i$ and $j$ may have equal effects on each other's lifetime reproductive success, but this will not be captured 
 
