some minor formatting changes for NatureMeth

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -46,30 +46,32 @@
 \affil[2]{School of Natural Resources and the Environment, The University of Arizona, Tucson, USA}
 \affil[3]{Centre for Integrative Ecology, School of Biological Sciences, University of Canterbury, Christchurch, New Zealand}
 
-\date{} % supresses date
+% \date{} % supresses date
 
-\setcounter{page}{70}
+% \setcounter{page}{70}
 
 \setlength{\intextsep}{10ex}
 
 \begin{document}
-% \maketitle  
-% \newpage
+\maketitle  
+\newpage
 \setcounter{secnumdepth}{3} % sections are level 1
 
-% \linenumbers
+\linenumbers
 
 
-\section*{Abstract}
+% \section*{Abstract}
 
 % Submit to Nature Methods
 % Follow Nourizonoz et al 2020 (17, pages 1052–1059) as a guide 
+% Main text: 2500 - 3500 words (excluding Methods), ~ 40 references
+% online Methods separate
 
     \paragraph{}
-    Network theory allows us to understand complex systems by evaluating how their constituent components interact with one another. Estimating these interactions from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more components are included in the system, and not all interactions may be realised when some components are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual component performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, though potential applications of this framework extend well beyond biological systems. 
+    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent components interact with one another. Estimating these interactions from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more components are included in the system, and not all interactions may be realised when some components are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual component performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, though potential applications of this framework extend well beyond biological systems.}
 
 
-\newpage
+
 \section{Introduction}
 
     % Things the intro needs to do: 
