a few notes and thinking about results structure

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -84,16 +84,14 @@
     In many biological systems, interactions between various components affect each other's performance and together determine the dynamics of the whole system. In order to understand how system dynamics behave when many components are involved, such complex systems can be represented as networks where the components are nodes and linked by interactions. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002}.
 
     \paragraph{} 
-    In many systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence and rarely match empirical estimates of interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+    In many systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and rarely match empirical estimates of interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
-    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenoligical and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system. Such methods can quickly become data intensive and computationally complex however as the number of nodes $S$ increases and the number of potential interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: their components are typically unevenly abundant and distributed with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis irregardless of the role they might play. Empirically quantifying interaction matrices for diverse systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenoligical and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system. Such methods can quickly become data intensive and computationally complex however as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: their components are typically unevenly abundant and distributed with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis irregardless of the role they might play. Empirically quantifying interaction matrices for diverse systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
 
 
     \paragraph{} % I'm not sur this paragraph will be necessary ... but it will need a little bit more work if I include it.
-    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We use a multi-tiered model which allows us to estimate both realised and unrealised interactions. Our framework is applied to a case study of an annual wildflower plant community in Western Australia consisting of 22 focal species and up to 52 neighbouring species, and the resulting interaction parameters are scaled into per-capita interaction strengths. We illustrate how couching the resulting interactions into further established models of population dynamics can help us account for other biological processes affecting species performance, as well as how to translate interaction effects on the measured variable into effects on another variable of interest. 
-
-    We demonstrate how our method can integrate into and extend traditional plant population dynamic approaches to quantifying interactions by explicitly dealing with many species and allowing for both competitive and facilitative interactions. We illustrate how the resulting interaction matrices differs from a co-occurrence network on the same data, and suggest potential applications that make use of the rich information provided by species interaction networks.
+    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We use a multi-tiered model which allows us to estimate both realised and unrealised interactions. Our framework is applied to a case study of an annual wildflower plant community in Western Australia consisting of 22 focal species and up to 52 neighbouring species, and the resulting interaction parameters are scaled into per-capita interaction strengths. We illustrate how couching the resulting interactions into established models of population dynamics can help us account for other biological processes affecting species performance, as well as how to translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differs from an association network on the same data, and suggest potential applications that make use of the rich information provided by species interaction networks.
 
     %Interactions between species can affect growth rates and population abundances, for example as a predator eats a prey or two plants compete for resources. Together, interactions between many species influence the dynamics of the whole community in ways which can determine patterns of species richness and abundance. In order to understand how community dynamics behave when many species are involved, ecologists can represent communities as networks \parencite{Pimm1978} where species are nodes and linked by interactions. This approach provides a broad view of how multiple species relate to one another within a community \parencite{Kefi2015}. As a result, ecological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these communities \parencite{Dunne2002}. 
 
@@ -210,6 +208,8 @@
     \section{Case study}
 
     	We applied the model framework described above to a case study of annual wildflower plants. After quantifying the interaction matrix, we scale all interaction samples using estimates of intrinsic fitness ($\beta_{i0}$) and experimentally-measured species demographic rates. The scaling is determined by a system-appropriate population dynamic model and allows us to translate the interaction matrix into per-capita effects on  abundance. This transformation places the resulting interaction strengths on the same scale and allows us to compare the community-wide effects of different species, amongst other potential applications further illustrated in the Results and Discussion. 
+        % Maybe add justification for applying it to plant data here -  possibly add that we assume all nodes 'perform' in the same way. (ie applicable to horizontal systems)
+
 
     	\subsection{Data}
 
@@ -253,6 +253,19 @@
 
     \subsection{Implementation}
 
+    % 1 or 2 paragraphs explaining what we did (the 'method') applied to the data 
+
+    In order to estimate pair-wise interactions in a diverse community of annual wildflower species, we developed a multi-tiered model framework capable of .. Realised interactions (define) are first estimated by a neigbour-density dependant model which regresses the performance (here measured as seed production) of individual plants against the identity and abundance of neighbours. These realised interactions are then used to estimate unrealised interactions by .... The model is implemented in a Bayesian statistical framework which allows both models to contribute to the likelihood. This approach is also more robust to the inclsion / estimation of many interactions without running as much risk of overparameterisation. 
+
+    % I probably need to mention something about the model output beign distributions here. 
+
+    \subsection{}
+
+    I can talk about the scaling here. 
+
+
+
+    
 
 
 	\paragraph{} 
